   * fix the position of some halos when unit has a height offset (patch #710)
   * Submerged units are no longer drowned when zooming.
   * scenery
     * added animated windmill, fancy and damaged tents, icepack, and shipwreck
   * fix problems with colour cursor in fullscreen (slow speed, bug #7555 and bug #6052).
   * new color cursors
 * sound
   * new or improved sounds: hatchet
   * sounds for user interface events
 * language and i18n:
   * updated manual: French
   * updated translations: Bulgarian, Czech, Danish, Dutch, French, German,
     Greek, Hungarian, Italian, Norwegian, Portuguese (Brazil), Spanish, Swedish
   * new translations: Indonesian
   * updated DejaVuSans font to version 2.16
   * removed FreeSans support since all the codes needed should be coverd by
     DejaVuSans now
 * multiplayer:
   * revised maps: Blitz, Castle Hopping Isle, Wilderlands
   * The countdown timer is now coloured properly when the remaining time is
     less than 2 minutes.
   * observer can save a replay of the game again
* units:
    * balancing changes:
      * converted the cold resistance of the Elvish Sorceress line to a holy
        resistance
      * decreased the holy resistance of the Orcish Assassin line from 20% to 0%
      * remove the 'quick' trait from the Clasher line
      * decreased the holy resistance of the Sky Drake from 20% to -30%
      * decreased the holy resistance of the Hurricane Drake from 20% to -30%
      * decreased the holy resistance of the Mermaid Priestess from 40% to 20%
      * decreased the holy resistance of the Mermaid Diviner from 60% to 40%
      * decreased the holy resistance of the Dwarves from 20% to 10%
      * increased the holy resistance of the Ghost line from -60% to -30%
      * enabled Lich and Ancient Lich to go on deep water and gave them submerge
      * Level 0 Ruffian & Woodsman added.
 * terrain system
   * added layer support to the terrain letters, two layers are supported
 * WML engine