@@ -42,6 +42,7 @@ Version 1.3.1+svn:
      * added animated windmill, fancy and damaged tents, icepack, and shipwreck
    * fix problems with colour cursor in fullscreen (slow speed, bug #7555 and bug #6052).
    * new color cursors
+   * fixed some scrolling corner cases (eg. fights happening partially offscreen)
  * sound
    * new or improved sounds: hatchet
    * sounds for user interface events
